# ssh.build

./: .bazelrc  .buckconfig  .gitattributes  .gitignore  AGENTS.md  README.md  WORKSPACE.bazel  flake.nix
nix/: patches.nix
patches/: README.md
patches/libssh2/: README.md
patches/openssh/: README.md  enable-none-cipher.patch
tools/bazel/: BUILD.bazel
tools/buck/: BUCK  stamp_test.sh
